feat: add core netstore support endpoints
